[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapkel"
version = "0.0.1"
description = "DAPKEL: Data Analysis Package for KELpie"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib==3.10.8"
]

[tool.setuptools.packages.find]
where = ["src"]
