[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dapkel"
dynamic = ["version"]
description = "DAPKEL: Data Analysis Package for KELpie"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Sergei Kulkov", email = "sergei.kulkov23@gmail.com"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib==3.10.8"
]

[project.urls]
Homepage = "https://github.com/rngKomorebi/dapkel"
Repository = "https://github.com/rngKomorebi/dapkel"
Issues = "https://github.com/rngKomorebi/dapkel/issues"
Changelog = "https://github.com/rngKomorebi/dapkel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
